fixes scrolling bug on mobile devices

--- a/css/main.css
+++ b/css/main.css
@@ -1,20 +1,42 @@
 * {
-  padding: 0;
   margin: 0;
-  background: #010b16;
-  font-family: 'Montserrat', sans-serif;
+  padding: 0;
+  border: none;
+  outline: none;
+  -webkit-tab-highlight-color: transparent;
   font-size: 100%;
+  font-weight: normal;
+  font-style: normal;
+  text-decoration: none;
+  list-style: none;
+  font-family: 'Montserrat', sans-serif;
+  font-variant: normal;
+  text-transform: none;
+  -webkit-font-smoothing: antialiased;
+  -moz-osx-font-smoothing: grayscale;
+  background: #010b16;
+}
+
+*:focus {
+  outline: none;
+}
+
+::-moz-focus-inner {
+  border: none;
+}
+
+html {
+  -webkit-text-size-adjust: 100%;
+  -ms-text-size-adjust: 100%;
 }
 
 div {
-  margin: 0 auto;
+  margin: 20px auto 35px auto;
   color: #fff;
   text-transform: uppercase;
-  position: fixed;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
   text-align: center;
+  width: 100%;
+  max-width: 800px;
 }
 
 h1 {
@@ -35,7 +57,6 @@ p {
 a {
   text-decoration: none;
   color: #19c9f2;
-  font-size: 25px;
 }
 
 a:hover {
